--- a/index.html
+++ b/index.html
@@ -10,31 +10,31 @@
 
 
 
-<link rel="canonical" href="http://blog.justalfred.com">
+<link rel="canonical" href="https://blog.justalfred.com">
         <meta name="author" content="Just Alfred" />
 
     <!-- Open Graph tags -->
         <meta property="og:site_name" content="Just Alfred" />
         <meta property="og:type" content="website"/>
         <meta property="og:title" content="Just Alfred"/>
-        <meta property="og:url" content="http://blog.justalfred.com"/>
+        <meta property="og:url" content="https://blog.justalfred.com"/>
         <meta property="og:description" content="Just Alfred"/>
 
     <meta name="twitter:card" content="summary">
         <meta name="twitter:site" content="@Alphrabet">
         <meta name="twitter:creator" content="@Alphrabet">
-    <meta name="twitter:domain" content="http://blog.justalfred.com">
+    <meta name="twitter:domain" content="https://blog.justalfred.com">
 
     <!-- Bootstrap -->
-        <link rel="stylesheet" href="http://blog.justalfred.com/theme/css/bootstrap.flatly.min.css" type="text/css"/>
-    <link href="http://blog.justalfred.com/theme/css/font-awesome.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="https://blog.justalfred.com/theme/css/bootstrap.flatly.min.css" type="text/css"/>
+    <link href="https://blog.justalfred.com/theme/css/font-awesome.min.css" rel="stylesheet">
 
-    <link href="http://blog.justalfred.com/theme/css/pygments/native.css" rel="stylesheet">
-        <link href="http://blog.justalfred.com/theme/css/typogrify.css" rel="stylesheet">
-    <link rel="stylesheet" href="http://blog.justalfred.com/theme/css/style.css" type="text/css"/>
-        <link href="http://blog.justalfred.com/static/custom.css" rel="stylesheet">
+    <link href="https://blog.justalfred.com/theme/css/pygments/native.css" rel="stylesheet">
+        <link href="https://blog.justalfred.com/theme/css/typogrify.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://blog.justalfred.com/theme/css/style.css" type="text/css"/>
+        <link href="https://blog.justalfred.com/static/custom.css" rel="stylesheet">
 
-        <link href="http://blog.justalfred.com/feeds/all.rss.xml" type="application/rss+xml" rel="alternate"
+        <link href="https://blog.justalfred.com/feeds/all.rss.xml" type="application/rss+xml" rel="alternate"
               title="Just Alfred RSS Feed"/>
 
 </head>
@@ -49,32 +49,32 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="http://blog.justalfred.com/" class="navbar-brand">
+            <a href="https://blog.justalfred.com/" class="navbar-brand">
 Just Alfred            </a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
-                         <li><a href="http://blog.justalfred.com/pages/about-the-site.html">
-                             About the&nbsp;Site
-                          </a></li>
                         <li >
-                            <a href="http://blog.justalfred.com/category/code.html">Code</a>
+                            <a href="https://blog.justalfred.com/category/code.html">Code</a>
                         </li>
                         <li >
-                            <a href="http://blog.justalfred.com/category/humans.html">Humans</a>
+                            <a href="https://blog.justalfred.com/category/humans.html">Humans</a>
                         </li>
                         <li >
-                            <a href="http://blog.justalfred.com/category/misc.html">Misc</a>
+                            <a href="https://blog.justalfred.com/category/literature.html">Literature</a>
                         </li>
                         <li >
-                            <a href="http://blog.justalfred.com/category/music.html">Music</a>
+                            <a href="https://blog.justalfred.com/category/misc.html">Misc</a>
                         </li>
                         <li >
-                            <a href="http://blog.justalfred.com/category/science.html">Science</a>
+                            <a href="https://blog.justalfred.com/category/music.html">Music</a>
+                        </li>
+                        <li >
+                            <a href="https://blog.justalfred.com/category/science.html">Science</a>
                         </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-              <li><a href="http://blog.justalfred.com/archives.html"><i class="fa fa-th-list"></i><span class="icon-label">Archives</span></a></li>
+              <li><a href="https://blog.justalfred.com/archives.html"><i class="fa fa-th-list"></i><span class="icon-label">Archives</span></a></li>
             </ul>
         </div>
         <!-- /.navbar-collapse -->
@@ -87,72 +87,72 @@ Just Alfred            </a>
         <div class="col-sm-9">
 
             <article>
-                <h2><a href="http://blog.justalfred.com/i-am-not-who-i-was.html">I Am Not Who I&nbsp;Was</a></h2>
+                <h2><a href="https://blog.justalfred.com/the-role-and-importance-of-curiosity-in-data-science.html">The Role and Importance of Curiosity in Data&nbsp;Science</a></h2>
+                <div class="summary"><p>I keep hearing curiosity is important in data science. I wonder&nbsp;why&#8230;.</p>
+                    <a class="btn btn-default btn-xs" href="https://blog.justalfred.com/the-role-and-importance-of-curiosity-in-data-science.html">more ...</a>
+                </div>
+            </article>
+            <hr/>
+            <article>
+                <h2><a href="https://blog.justalfred.com/the-acceptance-of-ambiguity.html">The Acceptance of&nbsp;Ambiguity</a></h2>
+                <div class="summary"><p>When the answer isn&#8217;t clear, it might mean it doesn&#8217;t need to&nbsp;be.</p>
+                    <a class="btn btn-default btn-xs" href="https://blog.justalfred.com/the-acceptance-of-ambiguity.html">more ...</a>
+                </div>
+            </article>
+            <hr/>
+            <article>
+                <h2><a href="https://blog.justalfred.com/my-messages-for-meditators.html">My Messages for&nbsp;Meditators</a></h2>
+                <div class="summary"><p>I&#8217;m still beginning, but I have&nbsp;thoughts.</p>
+                    <a class="btn btn-default btn-xs" href="https://blog.justalfred.com/my-messages-for-meditators.html">more ...</a>
+                </div>
+            </article>
+            <hr/>
+            <article>
+                <h2><a href="https://blog.justalfred.com/to-listen.html">To&nbsp;Listen</a></h2>
+                <div class="summary"><p>Culture in One&nbsp;Character</p>
+                    <a class="btn btn-default btn-xs" href="https://blog.justalfred.com/to-listen.html">more ...</a>
+                </div>
+            </article>
+            <hr/>
+            <article>
+                <h2><a href="https://blog.justalfred.com/literary-theory.html">Literary&nbsp;Theory</a></h2>
+                <div class="summary"><p>Is to understand literature to understand&nbsp;society?</p>
+                    <a class="btn btn-default btn-xs" href="https://blog.justalfred.com/literary-theory.html">more ...</a>
+                </div>
+            </article>
+            <hr/>
+            <article>
+                <h2><a href="https://blog.justalfred.com/i-am-not-who-i-was.html">I Am Not Who I&nbsp;Was</a></h2>
                 <div class="summary"><p>We change. Sometimes radically. What does that&nbsp;mean?</p>
-                    <a class="btn btn-default btn-xs" href="http://blog.justalfred.com/i-am-not-who-i-was.html">more ...</a>
+                    <a class="btn btn-default btn-xs" href="https://blog.justalfred.com/i-am-not-who-i-was.html">more ...</a>
                 </div>
             </article>
             <hr/>
             <article>
-                <h2><a href="http://blog.justalfred.com/the-weak-weak-anthropic-principle.html">The Weak Weak Anthropic&nbsp;Principle</a></h2>
+                <h2><a href="https://blog.justalfred.com/the-weak-weak-anthropic-principle.html">The Weak Weak Anthropic&nbsp;Principle</a></h2>
                 <div class="summary"><p>Reality doesn&#8217;t care about your&nbsp;beliefs.</p>
-                    <a class="btn btn-default btn-xs" href="http://blog.justalfred.com/the-weak-weak-anthropic-principle.html">more ...</a>
+                    <a class="btn btn-default btn-xs" href="https://blog.justalfred.com/the-weak-weak-anthropic-principle.html">more ...</a>
                 </div>
             </article>
             <hr/>
             <article>
-                <h2><a href="http://blog.justalfred.com/discoveries-i.html">Discoveries&nbsp;(I)</a></h2>
+                <h2><a href="https://blog.justalfred.com/discoveries-i.html">Discoveries&nbsp;(I)</a></h2>
                 <div class="summary"><p>Reporting on my&nbsp;quest</p>
-                    <a class="btn btn-default btn-xs" href="http://blog.justalfred.com/discoveries-i.html">more ...</a>
+                    <a class="btn btn-default btn-xs" href="https://blog.justalfred.com/discoveries-i.html">more ...</a>
                 </div>
             </article>
             <hr/>
             <article>
-                <h2><a href="http://blog.justalfred.com/empathy-in-its-place.html">Empathy in its&nbsp;Place</a></h2>
+                <h2><a href="https://blog.justalfred.com/empathy-in-its-place.html">Empathy in its&nbsp;Place</a></h2>
                 <div class="summary"><p>Empathy. Mostly&nbsp;good.</p>
-                    <a class="btn btn-default btn-xs" href="http://blog.justalfred.com/empathy-in-its-place.html">more ...</a>
+                    <a class="btn btn-default btn-xs" href="https://blog.justalfred.com/empathy-in-its-place.html">more ...</a>
                 </div>
             </article>
             <hr/>
             <article>
-                <h2><a href="http://blog.justalfred.com/truth-and-beauty.html">Truth and&nbsp;Beauty</a></h2>
+                <h2><a href="https://blog.justalfred.com/truth-and-beauty.html">Truth and&nbsp;Beauty</a></h2>
                 <div class="summary"><p>Truth and Beauty. Truth or Beauty. Truth in&nbsp;Beauty.</p>
-                    <a class="btn btn-default btn-xs" href="http://blog.justalfred.com/truth-and-beauty.html">more ...</a>
-                </div>
-            </article>
-            <hr/>
-            <article>
-                <h2><a href="http://blog.justalfred.com/present.html">Present</a></h2>
-                <div class="summary"><p>Present</p>
-                    <a class="btn btn-default btn-xs" href="http://blog.justalfred.com/present.html">more ...</a>
-                </div>
-            </article>
-            <hr/>
-            <article>
-                <h2><a href="http://blog.justalfred.com/excerpts-of-2016.html">Excerpts of&nbsp;2016</a></h2>
-                <div class="summary"><p>My year via excerpts from my personal&nbsp;writing</p>
-                    <a class="btn btn-default btn-xs" href="http://blog.justalfred.com/excerpts-of-2016.html">more ...</a>
-                </div>
-            </article>
-            <hr/>
-            <article>
-                <h2><a href="http://blog.justalfred.com/pygotham-2016.html">PyGotham&nbsp;2016</a></h2>
-                <div class="summary"><p>A talk I gave. Not exciting. Maybe&nbsp;useful.</p>
-                    <a class="btn btn-default btn-xs" href="http://blog.justalfred.com/pygotham-2016.html">more ...</a>
-                </div>
-            </article>
-            <hr/>
-            <article>
-                <h2><a href="http://blog.justalfred.com/you-are-an-antichrist.html">You are an&nbsp;Antichrist</a></h2>
-                <div class="summary"><p>It&#8217;s only&nbsp;logical.</p>
-                    <a class="btn btn-default btn-xs" href="http://blog.justalfred.com/you-are-an-antichrist.html">more ...</a>
-                </div>
-            </article>
-            <hr/>
-            <article>
-                <h2><a href="http://blog.justalfred.com/renaissance-role-models.html">Renaissance Role&nbsp;Models</a></h2>
-                <div class="summary"><p>A model of role models from a Renaissance&nbsp;ideal.</p>
-                    <a class="btn btn-default btn-xs" href="http://blog.justalfred.com/renaissance-role-models.html">more ...</a>
+                    <a class="btn btn-default btn-xs" href="https://blog.justalfred.com/truth-and-beauty.html">more ...</a>
                 </div>
             </article>
             <hr/>
@@ -160,17 +160,17 @@ Just Alfred            </a>
         <ul class="pagination">
                 <li class="prev disabled"><a href="#">&laquo;</a></li>
                     <li class="active"><a
-                            href="http://blog.justalfred.com/index.html">1</a></li>
+                            href="https://blog.justalfred.com/index.html">1</a></li>
                     <li class=""><a
-                            href="http://blog.justalfred.com/index2.html">2</a></li>
+                            href="https://blog.justalfred.com/index2.html">2</a></li>
                     <li class=""><a
-                            href="http://blog.justalfred.com/index3.html">3</a></li>
+                            href="https://blog.justalfred.com/index3.html">3</a></li>
                     <li class=""><a
-                            href="http://blog.justalfred.com/index4.html">4</a></li>
+                            href="https://blog.justalfred.com/index4.html">4</a></li>
                     <li class=""><a
-                            href="http://blog.justalfred.com/index5.html">5</a></li>
+                            href="https://blog.justalfred.com/index5.html">5</a></li>
                 <li class="next"><a
-                        href="http://blog.justalfred.com/index2.html">&raquo;</a></li>
+                        href="https://blog.justalfred.com/index2.html">&raquo;</a></li>
         </ul>
         </div>
         <div class="col-sm-3" id="sidebar">
@@ -187,36 +187,41 @@ Just Alfred            </a>
 
 
 
-            <li class="list-group-item"><a href="http://blog.justalfred.com/"><h4><i class="fa fa-tags fa-lg"></i><span class="icon-label">Tags</span></h4></a>
+            <li class="list-group-item"><a href="https://blog.justalfred.com/"><h4><i class="fa fa-tags fa-lg"></i><span class="icon-label">Tags</span></h4></a>
                 <ul class="list-group " id="tags">
                     <li class="list-group-item tag-1">
-                        <a href="http://blog.justalfred.com/tag/humans.html">
+                        <a href="https://blog.justalfred.com/tag/the-classical-kwontum-interface.html">
+                            The Classical-Kwontum Interface
+                        </a>
+                    </li>
+                    <li class="list-group-item tag-1">
+                        <a href="https://blog.justalfred.com/tag/humans.html">
                             humans
                         </a>
                     </li>
                     <li class="list-group-item tag-1">
-                        <a href="http://blog.justalfred.com/tag/music.html">
+                        <a href="https://blog.justalfred.com/tag/music.html">
                             Music
                         </a>
                     </li>
-                    <li class="list-group-item tag-1">
-                        <a href="http://blog.justalfred.com/tag/the-classical-kwontum-interface.html">
-                            The Classical-Kwontum Interface
+                    <li class="list-group-item tag-2">
+                        <a href="https://blog.justalfred.com/tag/code.html">
+                            code
                         </a>
                     </li>
                     <li class="list-group-item tag-2">
-                        <a href="http://blog.justalfred.com/tag/science.html">
+                        <a href="https://blog.justalfred.com/tag/science.html">
                             science
                         </a>
                     </li>
                     <li class="list-group-item tag-3">
-                        <a href="http://blog.justalfred.com/tag/info.html">
+                        <a href="https://blog.justalfred.com/tag/info.html">
                             info
                         </a>
                     </li>
                     <li class="list-group-item tag-3">
-                        <a href="http://blog.justalfred.com/tag/code.html">
-                            Code
+                        <a href="https://blog.justalfred.com/tag/literature.html">
+                            literature
                         </a>
                     </li>
                 </ul>
@@ -239,7 +244,7 @@ Just Alfred            </a>
    <div class="container">
       <hr>
       <div class="row">
-         <div class="col-xs-10">&copy; 2017 Just Alfred
+         <div class="col-xs-10">&copy; 2018 Just Alfred
             &middot; Powered by <a href="https://github.com/DandyDev/pelican-bootstrap3" target="_blank">pelican-bootstrap3</a>,
             <a href="http://docs.getpelican.com/" target="_blank">Pelican</a>,
             <a href="http://getbootstrap.com" target="_blank">Bootstrap</a>         </div>
@@ -247,13 +252,13 @@ Just Alfred            </a>
       </div>
    </div>
 </footer>
-<script src="http://blog.justalfred.com/theme/js/jquery.min.js"></script>
+<script src="https://blog.justalfred.com/theme/js/jquery.min.js"></script>
 
 <!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="http://blog.justalfred.com/theme/js/bootstrap.min.js"></script>
+<script src="https://blog.justalfred.com/theme/js/bootstrap.min.js"></script>
 
 <!-- Enable responsive features in IE8 with Respond.js (https://github.com/scottjehl/Respond) -->
-<script src="http://blog.justalfred.com/theme/js/respond.min.js"></script>
+<script src="https://blog.justalfred.com/theme/js/respond.min.js"></script>
 
     <!-- Google Analytics -->
     <script type="text/javascript">
