--- a/drafts/getting-started-with-pelican-on-github-pages.html
+++ b/drafts/getting-started-with-pelican-on-github-pages.html
@@ -10,7 +10,7 @@
 
 
 
-<link rel="canonical" href="http://blog.justalfred.com/drafts/getting-started-with-pelican-on-github-pages.html">
+<link rel="canonical" href="https://blog.justalfred.com/drafts/getting-started-with-pelican-on-github-pages.html">
 
         <meta name="author" content="Just Alfred" />
         <meta name="keywords" content="Code" />
@@ -19,7 +19,7 @@
         <meta property="og:site_name" content="Just Alfred" />
         <meta property="og:type" content="article"/>
         <meta property="og:title" content="Getting Started with Pelican on Github Pages"/>
-        <meta property="og:url" content="http://blog.justalfred.com/drafts/getting-started-with-pelican-on-github-pages.html"/>
+        <meta property="og:url" content="https://blog.justalfred.com/drafts/getting-started-with-pelican-on-github-pages.html"/>
         <meta property="og:description" content="How I got this site started"/>
         <meta property="article:published_time" content="2015-06-30" />
             <meta property="article:section" content="code" />
@@ -29,22 +29,22 @@
     <meta name="twitter:card" content="summary">
         <meta name="twitter:site" content="@Alphrabet">
         <meta name="twitter:creator" content="@Alphrabet">
-    <meta name="twitter:domain" content="http://blog.justalfred.com">
+    <meta name="twitter:domain" content="https://blog.justalfred.com">
             <meta property="twitter:title"
                   content="Getting Started with Pelican on Github&nbsp;Pages"/>
             <meta property="twitter:description"
                   content="<p>How I got this site&nbsp;started</p>"/>
 
     <!-- Bootstrap -->
-        <link rel="stylesheet" href="http://blog.justalfred.com/theme/css/bootstrap.flatly.min.css" type="text/css"/>
-    <link href="http://blog.justalfred.com/theme/css/font-awesome.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="https://blog.justalfred.com/theme/css/bootstrap.flatly.min.css" type="text/css"/>
+    <link href="https://blog.justalfred.com/theme/css/font-awesome.min.css" rel="stylesheet">
 
-    <link href="http://blog.justalfred.com/theme/css/pygments/native.css" rel="stylesheet">
-        <link href="http://blog.justalfred.com/theme/css/typogrify.css" rel="stylesheet">
-    <link rel="stylesheet" href="http://blog.justalfred.com/theme/css/style.css" type="text/css"/>
-        <link href="http://blog.justalfred.com/static/custom.css" rel="stylesheet">
+    <link href="https://blog.justalfred.com/theme/css/pygments/native.css" rel="stylesheet">
+        <link href="https://blog.justalfred.com/theme/css/typogrify.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://blog.justalfred.com/theme/css/style.css" type="text/css"/>
+        <link href="https://blog.justalfred.com/static/custom.css" rel="stylesheet">
 
-        <link href="http://blog.justalfred.com/feeds/all.rss.xml" type="application/rss+xml" rel="alternate"
+        <link href="https://blog.justalfred.com/feeds/all.rss.xml" type="application/rss+xml" rel="alternate"
               title="Just Alfred RSS Feed"/>
 
 </head>
@@ -59,32 +59,32 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="http://blog.justalfred.com/" class="navbar-brand">
+            <a href="https://blog.justalfred.com/" class="navbar-brand">
 Just Alfred            </a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
-                         <li><a href="http://blog.justalfred.com/pages/about-the-site.html">
-                             About the&nbsp;Site
-                          </a></li>
                         <li class="active">
-                            <a href="http://blog.justalfred.com/category/code.html">Code</a>
+                            <a href="https://blog.justalfred.com/category/code.html">Code</a>
                         </li>
                         <li >
-                            <a href="http://blog.justalfred.com/category/humans.html">Humans</a>
+                            <a href="https://blog.justalfred.com/category/humans.html">Humans</a>
                         </li>
                         <li >
-                            <a href="http://blog.justalfred.com/category/misc.html">Misc</a>
+                            <a href="https://blog.justalfred.com/category/literature.html">Literature</a>
                         </li>
                         <li >
-                            <a href="http://blog.justalfred.com/category/music.html">Music</a>
+                            <a href="https://blog.justalfred.com/category/misc.html">Misc</a>
                         </li>
                         <li >
-                            <a href="http://blog.justalfred.com/category/science.html">Science</a>
+                            <a href="https://blog.justalfred.com/category/music.html">Music</a>
+                        </li>
+                        <li >
+                            <a href="https://blog.justalfred.com/category/science.html">Science</a>
                         </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-              <li><a href="http://blog.justalfred.com/archives.html"><i class="fa fa-th-list"></i><span class="icon-label">Archives</span></a></li>
+              <li><a href="https://blog.justalfred.com/archives.html"><i class="fa fa-th-list"></i><span class="icon-label">Archives</span></a></li>
             </ul>
         </div>
         <!-- /.navbar-collapse -->
@@ -100,7 +100,7 @@ Just Alfred            </a>
         <article>
             <header class="page-header">
                 <h1>
-                    <a href="http://blog.justalfred.com/drafts/getting-started-with-pelican-on-github-pages.html"
+                    <a href="https://blog.justalfred.com/drafts/getting-started-with-pelican-on-github-pages.html"
                        rel="bookmark"
                        title="Permalink to Getting Started with Pelican on Github Pages">
                         Getting Started with Pelican on Github&nbsp;Pages
@@ -119,7 +119,7 @@ Just Alfred            </a>
 
 
 <span class="label label-default">Tags</span>
-	<a href="http://blog.justalfred.com/tag/code.html">Code</a>
+	<a href="https://blog.justalfred.com/tag/code.html">Code</a>
     
 </footer><!-- /.post-info -->                    </div>
                 </div>
@@ -193,7 +193,7 @@ needed by Pelican.
 &gt; Do you want to specify a URL prefix? e.g., http://example.com   <span class="o">(</span>Y/n<span class="o">)</span> 
 &gt; What is your URL prefix? <span class="o">(</span>see above example<span class="p">;</span> no trailing slash<span class="o">)</span> http://blog.justalfred.com 
 &gt; Do you want to <span class="nb">enable</span> article pagination? <span class="o">(</span>Y/n<span class="o">)</span> 
-&gt; How many articles per page <span class="k">do</span> you want? <span class="o">[</span>10<span class="o">]</span> 
+&gt; How many articles per page <span class="k">do</span> you want? <span class="o">[</span><span class="m">10</span><span class="o">]</span> 
 &gt; Do you want to generate a Fabfile/Makefile to automate generation and publishing? <span class="o">(</span>Y/n<span class="o">)</span> 
 &gt; Do you want an auto-reload <span class="p">&amp;</span> simpleHTTP script to assist with theme and site development? <span class="o">(</span>Y/n<span class="o">)</span> 
 &gt; Do you want to upload your website using FTP? <span class="o">(</span>y/N<span class="o">)</span> 
@@ -413,36 +413,41 @@ Happy&nbsp;Blogging!</p>
 
 
 
-            <li class="list-group-item"><a href="http://blog.justalfred.com/"><h4><i class="fa fa-tags fa-lg"></i><span class="icon-label">Tags</span></h4></a>
+            <li class="list-group-item"><a href="https://blog.justalfred.com/"><h4><i class="fa fa-tags fa-lg"></i><span class="icon-label">Tags</span></h4></a>
                 <ul class="list-group " id="tags">
                     <li class="list-group-item tag-1">
-                        <a href="http://blog.justalfred.com/tag/humans.html">
+                        <a href="https://blog.justalfred.com/tag/the-classical-kwontum-interface.html">
+                            The Classical-Kwontum Interface
+                        </a>
+                    </li>
+                    <li class="list-group-item tag-1">
+                        <a href="https://blog.justalfred.com/tag/humans.html">
                             humans
                         </a>
                     </li>
                     <li class="list-group-item tag-1">
-                        <a href="http://blog.justalfred.com/tag/music.html">
+                        <a href="https://blog.justalfred.com/tag/music.html">
                             Music
                         </a>
                     </li>
-                    <li class="list-group-item tag-1">
-                        <a href="http://blog.justalfred.com/tag/the-classical-kwontum-interface.html">
-                            The Classical-Kwontum Interface
+                    <li class="list-group-item tag-2">
+                        <a href="https://blog.justalfred.com/tag/code.html">
+                            code
                         </a>
                     </li>
                     <li class="list-group-item tag-2">
-                        <a href="http://blog.justalfred.com/tag/science.html">
+                        <a href="https://blog.justalfred.com/tag/science.html">
                             science
                         </a>
                     </li>
                     <li class="list-group-item tag-3">
-                        <a href="http://blog.justalfred.com/tag/info.html">
+                        <a href="https://blog.justalfred.com/tag/info.html">
                             info
                         </a>
                     </li>
                     <li class="list-group-item tag-3">
-                        <a href="http://blog.justalfred.com/tag/code.html">
-                            Code
+                        <a href="https://blog.justalfred.com/tag/literature.html">
+                            literature
                         </a>
                     </li>
                 </ul>
@@ -465,7 +470,7 @@ Happy&nbsp;Blogging!</p>
    <div class="container">
       <hr>
       <div class="row">
-         <div class="col-xs-10">&copy; 2017 Just Alfred
+         <div class="col-xs-10">&copy; 2018 Just Alfred
             &middot; Powered by <a href="https://github.com/DandyDev/pelican-bootstrap3" target="_blank">pelican-bootstrap3</a>,
             <a href="http://docs.getpelican.com/" target="_blank">Pelican</a>,
             <a href="http://getbootstrap.com" target="_blank">Bootstrap</a>         </div>
@@ -473,13 +478,13 @@ Happy&nbsp;Blogging!</p>
       </div>
    </div>
 </footer>
-<script src="http://blog.justalfred.com/theme/js/jquery.min.js"></script>
+<script src="https://blog.justalfred.com/theme/js/jquery.min.js"></script>
 
 <!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="http://blog.justalfred.com/theme/js/bootstrap.min.js"></script>
+<script src="https://blog.justalfred.com/theme/js/bootstrap.min.js"></script>
 
 <!-- Enable responsive features in IE8 with Respond.js (https://github.com/scottjehl/Respond) -->
-<script src="http://blog.justalfred.com/theme/js/respond.min.js"></script>
+<script src="https://blog.justalfred.com/theme/js/respond.min.js"></script>
 
     <!-- Google Analytics -->
     <script type="text/javascript">
