--- a/pygotham-2016.html
+++ b/pygotham-2016.html
@@ -10,7 +10,7 @@
 
 
 
-<link rel="canonical" href="http://blog.justalfred.com/pygotham-2016.html">
+<link rel="canonical" href="https://blog.justalfred.com/pygotham-2016.html">
 
         <meta name="author" content="Just Alfred" />
         <meta name="keywords" content="Code" />
@@ -19,7 +19,7 @@
         <meta property="og:site_name" content="Just Alfred" />
         <meta property="og:type" content="article"/>
         <meta property="og:title" content="PyGotham 2016"/>
-        <meta property="og:url" content="http://blog.justalfred.com/pygotham-2016.html"/>
+        <meta property="og:url" content="https://blog.justalfred.com/pygotham-2016.html"/>
         <meta property="og:description" content="A talk I gave. Not exciting. Maybe useful."/>
         <meta property="article:published_time" content="2016-07-20" />
             <meta property="article:section" content="code" />
@@ -29,22 +29,22 @@
     <meta name="twitter:card" content="summary">
         <meta name="twitter:site" content="@Alphrabet">
         <meta name="twitter:creator" content="@Alphrabet">
-    <meta name="twitter:domain" content="http://blog.justalfred.com">
+    <meta name="twitter:domain" content="https://blog.justalfred.com">
             <meta property="twitter:title"
                   content="PyGotham&nbsp;2016"/>
             <meta property="twitter:description"
                   content="<p>A talk I gave. Not exciting. Maybe&nbsp;useful.</p>"/>
 
     <!-- Bootstrap -->
-        <link rel="stylesheet" href="http://blog.justalfred.com/theme/css/bootstrap.flatly.min.css" type="text/css"/>
-    <link href="http://blog.justalfred.com/theme/css/font-awesome.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="https://blog.justalfred.com/theme/css/bootstrap.flatly.min.css" type="text/css"/>
+    <link href="https://blog.justalfred.com/theme/css/font-awesome.min.css" rel="stylesheet">
 
-    <link href="http://blog.justalfred.com/theme/css/pygments/native.css" rel="stylesheet">
-        <link href="http://blog.justalfred.com/theme/css/typogrify.css" rel="stylesheet">
-    <link rel="stylesheet" href="http://blog.justalfred.com/theme/css/style.css" type="text/css"/>
-        <link href="http://blog.justalfred.com/static/custom.css" rel="stylesheet">
+    <link href="https://blog.justalfred.com/theme/css/pygments/native.css" rel="stylesheet">
+        <link href="https://blog.justalfred.com/theme/css/typogrify.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://blog.justalfred.com/theme/css/style.css" type="text/css"/>
+        <link href="https://blog.justalfred.com/static/custom.css" rel="stylesheet">
 
-        <link href="http://blog.justalfred.com/feeds/all.rss.xml" type="application/rss+xml" rel="alternate"
+        <link href="https://blog.justalfred.com/feeds/all.rss.xml" type="application/rss+xml" rel="alternate"
               title="Just Alfred RSS Feed"/>
 
 </head>
@@ -59,32 +59,32 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="http://blog.justalfred.com/" class="navbar-brand">
+            <a href="https://blog.justalfred.com/" class="navbar-brand">
 Just Alfred            </a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
-                         <li><a href="http://blog.justalfred.com/pages/about-the-site.html">
-                             About the&nbsp;Site
-                          </a></li>
                         <li class="active">
-                            <a href="http://blog.justalfred.com/category/code.html">Code</a>
+                            <a href="https://blog.justalfred.com/category/code.html">Code</a>
                         </li>
                         <li >
-                            <a href="http://blog.justalfred.com/category/humans.html">Humans</a>
+                            <a href="https://blog.justalfred.com/category/humans.html">Humans</a>
                         </li>
                         <li >
-                            <a href="http://blog.justalfred.com/category/misc.html">Misc</a>
+                            <a href="https://blog.justalfred.com/category/literature.html">Literature</a>
                         </li>
                         <li >
-                            <a href="http://blog.justalfred.com/category/music.html">Music</a>
+                            <a href="https://blog.justalfred.com/category/misc.html">Misc</a>
                         </li>
                         <li >
-                            <a href="http://blog.justalfred.com/category/science.html">Science</a>
+                            <a href="https://blog.justalfred.com/category/music.html">Music</a>
+                        </li>
+                        <li >
+                            <a href="https://blog.justalfred.com/category/science.html">Science</a>
                         </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-              <li><a href="http://blog.justalfred.com/archives.html"><i class="fa fa-th-list"></i><span class="icon-label">Archives</span></a></li>
+              <li><a href="https://blog.justalfred.com/archives.html"><i class="fa fa-th-list"></i><span class="icon-label">Archives</span></a></li>
             </ul>
         </div>
         <!-- /.navbar-collapse -->
@@ -100,7 +100,7 @@ Just Alfred            </a>
         <article>
             <header class="page-header">
                 <h1>
-                    <a href="http://blog.justalfred.com/pygotham-2016.html"
+                    <a href="https://blog.justalfred.com/pygotham-2016.html"
                        rel="bookmark"
                        title="Permalink to PyGotham 2016">
                         PyGotham&nbsp;2016
@@ -119,7 +119,7 @@ Just Alfred            </a>
 
 
 <span class="label label-default">Tags</span>
-	<a href="http://blog.justalfred.com/tag/code.html">Code</a>
+	<a href="https://blog.justalfred.com/tag/code.html">Code</a>
     
 </footer><!-- /.post-info -->                    </div>
                 </div>
@@ -133,7 +133,7 @@ bothering with making reveal.js work, so it&#8217;s all one long html doc. Sorry
 it&#8217;s not prettier. I know what pretty looks like; I don&#8217;t know how to make
 pretty&nbsp;things.</p>
 <p>Well, for what it&#8217;s worth, I present to you
-<a href="http://blog.justalfred.com/html/PyGotham2016.html">the slides</a>
+<a href="https://blog.justalfred.com/html/PyGotham2016.html">the slides</a>
 to &#8220;Spark Dataframes for the Pandas&nbsp;Pro&#8221;. </p>
             </div>
             <!-- /.entry-content -->
@@ -155,36 +155,41 @@ to &#8220;Spark Dataframes for the Pandas&nbsp;Pro&#8221;. </p>
 
 
 
-            <li class="list-group-item"><a href="http://blog.justalfred.com/"><h4><i class="fa fa-tags fa-lg"></i><span class="icon-label">Tags</span></h4></a>
+            <li class="list-group-item"><a href="https://blog.justalfred.com/"><h4><i class="fa fa-tags fa-lg"></i><span class="icon-label">Tags</span></h4></a>
                 <ul class="list-group " id="tags">
                     <li class="list-group-item tag-1">
-                        <a href="http://blog.justalfred.com/tag/humans.html">
+                        <a href="https://blog.justalfred.com/tag/the-classical-kwontum-interface.html">
+                            The Classical-Kwontum Interface
+                        </a>
+                    </li>
+                    <li class="list-group-item tag-1">
+                        <a href="https://blog.justalfred.com/tag/humans.html">
                             humans
                         </a>
                     </li>
                     <li class="list-group-item tag-1">
-                        <a href="http://blog.justalfred.com/tag/music.html">
+                        <a href="https://blog.justalfred.com/tag/music.html">
                             Music
                         </a>
                     </li>
-                    <li class="list-group-item tag-1">
-                        <a href="http://blog.justalfred.com/tag/the-classical-kwontum-interface.html">
-                            The Classical-Kwontum Interface
+                    <li class="list-group-item tag-2">
+                        <a href="https://blog.justalfred.com/tag/code.html">
+                            code
                         </a>
                     </li>
                     <li class="list-group-item tag-2">
-                        <a href="http://blog.justalfred.com/tag/science.html">
+                        <a href="https://blog.justalfred.com/tag/science.html">
                             science
                         </a>
                     </li>
                     <li class="list-group-item tag-3">
-                        <a href="http://blog.justalfred.com/tag/info.html">
+                        <a href="https://blog.justalfred.com/tag/info.html">
                             info
                         </a>
                     </li>
                     <li class="list-group-item tag-3">
-                        <a href="http://blog.justalfred.com/tag/code.html">
-                            Code
+                        <a href="https://blog.justalfred.com/tag/literature.html">
+                            literature
                         </a>
                     </li>
                 </ul>
@@ -207,7 +212,7 @@ to &#8220;Spark Dataframes for the Pandas&nbsp;Pro&#8221;. </p>
    <div class="container">
       <hr>
       <div class="row">
-         <div class="col-xs-10">&copy; 2017 Just Alfred
+         <div class="col-xs-10">&copy; 2018 Just Alfred
             &middot; Powered by <a href="https://github.com/DandyDev/pelican-bootstrap3" target="_blank">pelican-bootstrap3</a>,
             <a href="http://docs.getpelican.com/" target="_blank">Pelican</a>,
             <a href="http://getbootstrap.com" target="_blank">Bootstrap</a>         </div>
@@ -215,13 +220,13 @@ to &#8220;Spark Dataframes for the Pandas&nbsp;Pro&#8221;. </p>
       </div>
    </div>
 </footer>
-<script src="http://blog.justalfred.com/theme/js/jquery.min.js"></script>
+<script src="https://blog.justalfred.com/theme/js/jquery.min.js"></script>
 
 <!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="http://blog.justalfred.com/theme/js/bootstrap.min.js"></script>
+<script src="https://blog.justalfred.com/theme/js/bootstrap.min.js"></script>
 
 <!-- Enable responsive features in IE8 with Respond.js (https://github.com/scottjehl/Respond) -->
-<script src="http://blog.justalfred.com/theme/js/respond.min.js"></script>
+<script src="https://blog.justalfred.com/theme/js/respond.min.js"></script>
 
     <!-- Google Analytics -->
     <script type="text/javascript">
