--- a/remix.html
+++ b/remix.html
@@ -10,17 +10,17 @@
 
 
 
-<link rel="canonical" href="http://blog.justalfred.com/remix.html">
+<link rel="canonical" href="https://blog.justalfred.com/remix.html">
 
         <meta name="author" content="Just Alfred" />
         <meta name="keywords" content="The Classical-Kwontum Interface,Music" />
-        <meta name="description" content="Originally published at: http://kwontum.blogspot.com/2011/09/None.html To my readers: Apologies for the extended hiatus. As it turns out, finishing and defending a dissertation drains one’s energy for composition more than I anticipated. After my momentum was lost, it was hard to pick up the ..." />
+        <meta name="description" content="Originally published at: http://kwontum.blogspot.com/2011/09/None.html To my readers: Apologies for the extended hiatus. As it turns out, finishing and defending a dissertation drains one’s energy for composition more than I anticipated. After my momentum was lost, it was hard to pick up the …" />
 
         <meta property="og:site_name" content="Just Alfred" />
         <meta property="og:type" content="article"/>
         <meta property="og:title" content="Remix"/>
-        <meta property="og:url" content="http://blog.justalfred.com/remix.html"/>
-        <meta property="og:description" content="Originally published at: http://kwontum.blogspot.com/2011/09/None.html To my readers: Apologies for the extended hiatus. As it turns out, finishing and defending a dissertation drains one’s energy for composition more than I anticipated. After my momentum was lost, it was hard to pick up the ..."/>
+        <meta property="og:url" content="https://blog.justalfred.com/remix.html"/>
+        <meta property="og:description" content="Originally published at: http://kwontum.blogspot.com/2011/09/None.html To my readers: Apologies for the extended hiatus. As it turns out, finishing and defending a dissertation drains one’s energy for composition more than I anticipated. After my momentum was lost, it was hard to pick up the …"/>
         <meta property="article:published_time" content="2011-09-17" />
             <meta property="article:section" content="music" />
             <meta property="article:tag" content="The Classical-Kwontum Interface" />
@@ -30,7 +30,7 @@
     <meta name="twitter:card" content="summary">
         <meta name="twitter:site" content="@Alphrabet">
         <meta name="twitter:creator" content="@Alphrabet">
-    <meta name="twitter:domain" content="http://blog.justalfred.com">
+    <meta name="twitter:domain" content="https://blog.justalfred.com">
             <meta property="twitter:title"
                   content="Remix"/>
             <meta property="twitter:description"
@@ -38,18 +38,18 @@
 <p>To my readers:  Apologies for the extended hiatus.  As it turns out,
 finishing and defending a dissertation drains one&#8217;s energy for
 composition more than I anticipated.  After my momentum was lost, it was
-hard to pick up the ...</p>"/>
+hard to pick up the …</p>"/>
 
     <!-- Bootstrap -->
-        <link rel="stylesheet" href="http://blog.justalfred.com/theme/css/bootstrap.flatly.min.css" type="text/css"/>
-    <link href="http://blog.justalfred.com/theme/css/font-awesome.min.css" rel="stylesheet">
+        <link rel="stylesheet" href="https://blog.justalfred.com/theme/css/bootstrap.flatly.min.css" type="text/css"/>
+    <link href="https://blog.justalfred.com/theme/css/font-awesome.min.css" rel="stylesheet">
 
-    <link href="http://blog.justalfred.com/theme/css/pygments/native.css" rel="stylesheet">
-        <link href="http://blog.justalfred.com/theme/css/typogrify.css" rel="stylesheet">
-    <link rel="stylesheet" href="http://blog.justalfred.com/theme/css/style.css" type="text/css"/>
-        <link href="http://blog.justalfred.com/static/custom.css" rel="stylesheet">
+    <link href="https://blog.justalfred.com/theme/css/pygments/native.css" rel="stylesheet">
+        <link href="https://blog.justalfred.com/theme/css/typogrify.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://blog.justalfred.com/theme/css/style.css" type="text/css"/>
+        <link href="https://blog.justalfred.com/static/custom.css" rel="stylesheet">
 
-        <link href="http://blog.justalfred.com/feeds/all.rss.xml" type="application/rss+xml" rel="alternate"
+        <link href="https://blog.justalfred.com/feeds/all.rss.xml" type="application/rss+xml" rel="alternate"
               title="Just Alfred RSS Feed"/>
 
 </head>
@@ -64,32 +64,32 @@ hard to pick up the ...</p>"/>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="http://blog.justalfred.com/" class="navbar-brand">
+            <a href="https://blog.justalfred.com/" class="navbar-brand">
 Just Alfred            </a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
             <ul class="nav navbar-nav">
-                         <li><a href="http://blog.justalfred.com/pages/about-the-site.html">
-                             About the&nbsp;Site
-                          </a></li>
                         <li >
-                            <a href="http://blog.justalfred.com/category/code.html">Code</a>
+                            <a href="https://blog.justalfred.com/category/code.html">Code</a>
                         </li>
                         <li >
-                            <a href="http://blog.justalfred.com/category/humans.html">Humans</a>
+                            <a href="https://blog.justalfred.com/category/humans.html">Humans</a>
                         </li>
                         <li >
-                            <a href="http://blog.justalfred.com/category/misc.html">Misc</a>
+                            <a href="https://blog.justalfred.com/category/literature.html">Literature</a>
+                        </li>
+                        <li >
+                            <a href="https://blog.justalfred.com/category/misc.html">Misc</a>
                         </li>
                         <li class="active">
-                            <a href="http://blog.justalfred.com/category/music.html">Music</a>
+                            <a href="https://blog.justalfred.com/category/music.html">Music</a>
                         </li>
                         <li >
-                            <a href="http://blog.justalfred.com/category/science.html">Science</a>
+                            <a href="https://blog.justalfred.com/category/science.html">Science</a>
                         </li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
-              <li><a href="http://blog.justalfred.com/archives.html"><i class="fa fa-th-list"></i><span class="icon-label">Archives</span></a></li>
+              <li><a href="https://blog.justalfred.com/archives.html"><i class="fa fa-th-list"></i><span class="icon-label">Archives</span></a></li>
             </ul>
         </div>
         <!-- /.navbar-collapse -->
@@ -105,7 +105,7 @@ Just Alfred            </a>
         <article>
             <header class="page-header">
                 <h1>
-                    <a href="http://blog.justalfred.com/remix.html"
+                    <a href="https://blog.justalfred.com/remix.html"
                        rel="bookmark"
                        title="Permalink to Remix">
                         Remix
@@ -124,9 +124,9 @@ Just Alfred            </a>
 
 
 <span class="label label-default">Tags</span>
-	<a href="http://blog.justalfred.com/tag/the-classical-kwontum-interface.html">The Classical-Kwontum Interface</a>
+	<a href="https://blog.justalfred.com/tag/the-classical-kwontum-interface.html">The Classical-Kwontum Interface</a>
         /
-	<a href="http://blog.justalfred.com/tag/music.html">Music</a>
+	<a href="https://blog.justalfred.com/tag/music.html">Music</a>
     
 </footer><!-- /.post-info -->                    </div>
                 </div>
@@ -136,8 +136,8 @@ finishing and defending a dissertation drains one&#8217;s energy for
 composition more than I anticipated.  After my momentum was lost, it was
 hard to pick up the pencil, as it were, through travels, moves, job
 searching and so on.  But I can only go so long without exercising my
-creative muscle, and so I am back.  And today my topic is the remix.<br />
-<a name="more"></a><br />
+creative muscle, and so I am back.  And today my topic is the remix.<br>
+<a name="more"></a><br>
 Or is the term &#8220;covers&#8221;?  &#8220;Edits&#8221;?  &#8220;Reworks&#8221;?  I won&#8217;t attempt to
 differentiate.  What I am calling a remix is any piece of music that
 draws heavily from an existing piece.  I think we are all familiar with
@@ -221,36 +221,41 @@ trance, for that matter.  Let&#8217;s have a&nbsp;discussion!</p>
 
 
 
-            <li class="list-group-item"><a href="http://blog.justalfred.com/"><h4><i class="fa fa-tags fa-lg"></i><span class="icon-label">Tags</span></h4></a>
+            <li class="list-group-item"><a href="https://blog.justalfred.com/"><h4><i class="fa fa-tags fa-lg"></i><span class="icon-label">Tags</span></h4></a>
                 <ul class="list-group " id="tags">
                     <li class="list-group-item tag-1">
-                        <a href="http://blog.justalfred.com/tag/humans.html">
+                        <a href="https://blog.justalfred.com/tag/the-classical-kwontum-interface.html">
+                            The Classical-Kwontum Interface
+                        </a>
+                    </li>
+                    <li class="list-group-item tag-1">
+                        <a href="https://blog.justalfred.com/tag/humans.html">
                             humans
                         </a>
                     </li>
                     <li class="list-group-item tag-1">
-                        <a href="http://blog.justalfred.com/tag/music.html">
+                        <a href="https://blog.justalfred.com/tag/music.html">
                             Music
                         </a>
                     </li>
-                    <li class="list-group-item tag-1">
-                        <a href="http://blog.justalfred.com/tag/the-classical-kwontum-interface.html">
-                            The Classical-Kwontum Interface
+                    <li class="list-group-item tag-2">
+                        <a href="https://blog.justalfred.com/tag/code.html">
+                            code
                         </a>
                     </li>
                     <li class="list-group-item tag-2">
-                        <a href="http://blog.justalfred.com/tag/science.html">
+                        <a href="https://blog.justalfred.com/tag/science.html">
                             science
                         </a>
                     </li>
                     <li class="list-group-item tag-3">
-                        <a href="http://blog.justalfred.com/tag/info.html">
+                        <a href="https://blog.justalfred.com/tag/info.html">
                             info
                         </a>
                     </li>
                     <li class="list-group-item tag-3">
-                        <a href="http://blog.justalfred.com/tag/code.html">
-                            Code
+                        <a href="https://blog.justalfred.com/tag/literature.html">
+                            literature
                         </a>
                     </li>
                 </ul>
@@ -273,7 +278,7 @@ trance, for that matter.  Let&#8217;s have a&nbsp;discussion!</p>
    <div class="container">
       <hr>
       <div class="row">
-         <div class="col-xs-10">&copy; 2017 Just Alfred
+         <div class="col-xs-10">&copy; 2018 Just Alfred
             &middot; Powered by <a href="https://github.com/DandyDev/pelican-bootstrap3" target="_blank">pelican-bootstrap3</a>,
             <a href="http://docs.getpelican.com/" target="_blank">Pelican</a>,
             <a href="http://getbootstrap.com" target="_blank">Bootstrap</a>         </div>
@@ -281,13 +286,13 @@ trance, for that matter.  Let&#8217;s have a&nbsp;discussion!</p>
       </div>
    </div>
 </footer>
-<script src="http://blog.justalfred.com/theme/js/jquery.min.js"></script>
+<script src="https://blog.justalfred.com/theme/js/jquery.min.js"></script>
 
 <!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="http://blog.justalfred.com/theme/js/bootstrap.min.js"></script>
+<script src="https://blog.justalfred.com/theme/js/bootstrap.min.js"></script>
 
 <!-- Enable responsive features in IE8 with Respond.js (https://github.com/scottjehl/Respond) -->
-<script src="http://blog.justalfred.com/theme/js/respond.min.js"></script>
+<script src="https://blog.justalfred.com/theme/js/respond.min.js"></script>
 
     <!-- Google Analytics -->
     <script type="text/javascript">
